--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
 			<h2 class="section-title"><span>Games</span></h2>
 			<div class="">
 				<div class="col-sm-6 col-md-6">
+					<a href="rewind-night.html">
+						<img alt="Rewind Night" src="assets/images/rewind-night-cover-image.png" />
+						<h3 class="text-center">Rewind Night</h3>
+					</a>
+				</div>
+                <div class="col-sm-6 col-md-6">
 					<a href="submariner.html">
 						<img alt="Submariner" src="assets/images/submariner-cover-image-thumb.png" />
 						<h3 class="text-center">Submariner</h3>
